--- a/package.json
+++ b/package.json
@@ -38,34 +38,33 @@
   "author": "johnrjj@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/chalk": "^0.4.31",
-    "@types/mocha": "^2.2.32",
-    "browserify": "^13.0.1",
-    "chai": "^3.5.0",
-    "mocha": "^3.1.2",
-    "nock": "^8.0.0",
-    "try-thread-sleep": "^1.0.0",
-    "ts-node": "^1.6.0"
+    "@types/chai": "^4.2.11",
+    "@types/chalk": "^2.2.0",
+    "@types/mocha": "^7.0.2",
+    "browserify": "^16.5.1",
+    "chai": "^4.2.0",
+    "mocha": "^7.2.0",
+    "nock": "^12.0.3",
+    "ts-node": "^8.10.1"
   },
   "dependencies": {
-    "@types/core-js": "^0.9.34",
-    "@types/inquirer": "0.0.29",
-    "@types/isomorphic-fetch": "0.0.31",
-    "@types/js-yaml": "^3.5.28",
-    "@types/node": "^6.0.45",
-    "@types/progress": "^1.1.28",
-    "@types/ramda": "0.0.2",
-    "@types/request": "0.0.31",
-    "@types/yargs": "0.0.33",
-    "chalk": "^1.1.3",
-    "core-js": "^2.4.0",
-    "inquirer": "^1.2.2",
-    "js-yaml": "^3.6.1",
-    "moment": "^2.15.1",
-    "progress": "^1.1.8",
-    "request": "^2.75.0",
-    "typescript": "^2.2.0-dev.20161123",
-    "yargs": "^4.7.1"
+    "@types/core-js": "^2.5.3",
+    "@types/inquirer": "^6.5.0",
+    "@types/isomorphic-fetch": "0.0.35",
+    "@types/js-yaml": "*",
+    "@types/node": "^14.0.5",
+    "@types/progress": "^2.0.3",
+    "@types/ramda": "^0.27.6",
+    "@types/request": "^2.48.5",
+    "@types/yargs": "^15.0.5",
+    "chalk": "^4.0.0",
+    "core-js": "^3.6.5",
+    "inquirer": "^7.1.0",
+    "js-yaml": "*",
+    "moment": "*",
+    "progress": "^2.0.3",
+    "request": "*",
+    "typescript": "^3.9.3",
+    "yargs": "^15.3.1"
   }
 }
